
- Changed Fields:
  + UNIHAN_FIELD_KANGXI_PAGE "kangXi_page" is renamed as UNIHAN_FIELD_DICT_PAGE "dict_page"
  + UNIHAN_FIELD_KANGXI_CHARNUM "kangXi_charNum" is renamed as UNIHAN_FIELD_DICT_POSITION "dict_position"
  + UNIHAN_FIELD_KANGXI_VIRTUAL "kangXi_virtual" is renamed as UNIHAN_FIELD_DICT_POSITION "dict_virtual"


- Changed Functions:
  + Pinyin/Zhuyin function normalizes strings as NFD by default, there are flags to change the behavior nevertheless.
  + The behavior of unihanDb_open_default() and unihan_open() has changed:
    now unihanDb_open() opens the user-defined cache and the db it mentions;
    while unihanDb_open_default() opens the system cache and the db it mentions.
  + unihanChar_has_property() is renamed as unihanChar_has_field()
  + unihanField_get_table() is renamed as unihanField_get_preferred_table()
  + Argument const_count in stringList_sized_new() is removed.

- Removed:
  + No more UNIHAN_DEFAULT_DB
  + UNIHAN_FIELD_VARIANT_TYPE is removed.
  + unihanField_is_case_no_change()

* Tue Oct 21 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.3-3
- Add following make targets: rpm_lint, koji_submit, koji_build,  pkg_remove_old.


* Mon Oct 20 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.3-0
- New Features:
  collection.h, file_function.h and verboseMsg.h is in API.
- Fixed:
  Missing documents in 0.5.2
- Changed:
  + collection.h: 
    - G_ARRAY_COPY is renamed as G_ARRAY_CONCAT to reflect its real functionality.
    - hashSet_new_full() now only takes 4 parameters because value value_destroy_func is not required,
      as in hashSet, key == value.
  + file_functions.h:
  - search_file_given_paths() is replaced by filename_search_paths()
  - replace file_determine() with file_choose()



* Tue Oct 06 2008 Ding-Yi Chen <dchen at redhat dot com> - 0.5.2-0
- New Features:
  + New pseudo field 'ZhuYin'.
  + allocate.h is in API.
  + New unihan_query options: -O -P -T -Z -z