@@ -30,7 +30,8 @@
 
 
 - Changed Functions:
-  + Pinyin/Zhuyin function normalizes strings as NFD by default, there are flags to change the behavior nevertheless.
+  + Pinyin/Zhuyin functions does not handle SQL wildchar now, because it already be done in field matching functions.
+  + Pinyin/Zhuyin functions normalize strings as NFD by default, there are flags to change the behavior nevertheless.
   + The behavior of unihanDb_open_default() and unihan_open() has changed:
     now unihanDb_open() opens the user-defined cache and the db it mentions;
     while unihanDb_open_default() opens the system cache and the db it mentions.
